[package]
name = "jsbsimrs"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mark-goodall/jsbsimrs"
description = "A Rust interface for JSBSim, a flight dynamics model (FDM) used in flight simulators."

[dev-dependencies]
serial_test = "3.3.1"
